src/main/metadata/objects/Custom_Apex_Sharing_Model__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will help us to setup sharing model for country per object</description>
    <fields>
        <fullName>Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPI__c</fullName>
        <label>ObjectAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Apex Sharing Model</label>
</CustomObject>